...
    <string name="login_logo_description">Simple Wallet logo</string>

    <string name="dashboard_title">My Wallet</string>
    <string name="dashboard_accounts_heading">Your accounts</string>
    <string name="dashboard_subtitle">Select an account to view the last 30 days.</string>
    <string name="logout_action">Log out</string>
    <string name="logout_loading">Logging out&#8230;</string>
    <string name="accounts_loading">Loading your accounts&#8230;</string>
    <string name="accounts_empty_title">No accounts yet</string>
    <string name="accounts_empty_message">There are no wallet accounts available for this profile.</string>
    <string name="accounts_error_title">Accounts unavailable</string>
    <string name="accounts_error_message">We couldn\'t load your accounts. Please try again.</string>
    <string name="retry_action">Try again</string>
...
